Made personal changes to fit requirements

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="https://res.cloudinary.com/vigneshshettyin/image/upload/v1641633273/loywlbq4tgduixnwpfws.png"
+      href="profilePic.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Hi, I'm a Web & App Developer, an Open Source Enthusiast who enjoys collaborating with others also makes stunningly professional web apps and Kotlin apps as a hobby." />
     <link
       rel="apple-touch-icon"
-      href="https://res.cloudinary.com/vigneshshettyin/image/upload/v1641633273/loywlbq4tgduixnwpfws.png"
+      href="profilePic.png"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css"
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Vignesh Shetty | Linktree | Make your link do more.</title>
+    <title>David Hofer-Zeni | Linktree</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
 
