--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="profilePic.png"
+      href="img/profilePic.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Hi, I'm a Web & App Developer, an Open Source Enthusiast who enjoys collaborating with others also makes stunningly professional web apps and Kotlin apps as a hobby." />
     <link
       rel="apple-touch-icon"
-      href="profilePic.png"
+      href="img/profilePic.png"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css"
