Fix label issues

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>David Hofer-Zeni | Linktree</title>
+    <title>David Zeni-Su | Linktree</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
 
